# modules

./: .gitignore
module/attrcalc/: CHANGELOG.md  CMakeLists.txt  README.md  build-attrcalc.sh
module/attrcalc/src/: attrcalc.cpp  attrcalc.h  attrcalc.json  expression_parser.cpp  expression_parser.h  vector_operations.cpp  vector_operations.h
module/attrcalc/test/: basic.job  basic_test.job  check_attr_len.job  check_attr_len_1.0.0.job  complex_expression.job  duplicate_attribute.job  invalid_expression.job  update_attribute.job
module/attrlist/: CHANGELOG.md  CMakeLists.txt  README.md  build-attrlist.sh
module/attrlist/src/: attrlist.cpp  attrlist.h  attrlist.json
module/demoattr/: CMakeLists.txt  build-demoattr.sh
module/demoattr/src/: demoattr.cpp  demoattr.h  demoattr.json
module/gendata/: CHANGELOG.md  CMakeLists.txt  README.md  build-gendata.sh
module/gendata/src/: gendata.cpp  gendata.h  gendata.json
module/input/: CHANGELOG.md  CMakeLists.txt
module/input/src/: input.cpp  input.json
module/mute/: CHANGELOG.md  CMakeLists.txt  README.md  build-mute.sh
module/mute/src/: expression_parser.cpp  expression_parser.h  mute.cpp  mute.h  mute.json  vector_operations.cpp  vector_operations.h
module/mute/test/: mute_3000_9000_0.job  mute_3000_9000_0_int32.job  mute_3000_9000_plus_2000.job  mute_3000_9000_sub_2000.job  mute_gt_expr_500_mul_crossline.job  mute_invalid_expression.job
module/output/: CHANGELOG.md  CMakeLists.txt  README.md  build-output.sh
module/output/src/: output.c  output.h  output.json
module/scale/: CHANGELOG.md  CMakeLists.txt  README.md  build-scale.sh
module/scale/src/: scale.cpp  scale.h  scale.json  scale_agc.cpp  scale_agc.h  scale_common.cpp  scale_common.h  scale_diverge.cpp  scale_diverge.h  scale_factor.cpp  scale_factor.h
module/scale/test/: scale_agc.job  scale_agc_fail.job  scale_diverge.job  scale_diverge_fail.job  scale_factor.job  scale_factor_fail.job
module/segyinput/: CMakeLists.txt  README.md  build-input.sh  build-segyinput.sh
module/segyinput/src/: input.c  input.h  input.json  segy_reader.cpp  segy_reader.h  segy_writer.cpp  segy_writer.h  segyinput.cpp  segyinput.h  segyinput.json  segyoutput.h
module/segyoutput/: CMakeLists.txt  README.md  build-segyoutput.sh
module/segyoutput/src/: segy_writer.cpp  segy_writer.h  segyinput.json  segyoutput.cpp  segyoutput.h  segyoutput.json
module/segytest/: CMakeLists.txt  build-segytest.sh  main.cpp
module/segytest/src/: segy_reader.cpp  segy_reader.h
module/testexpect/: CLAUDE.md  CMakeLists.txt  build-testexpect.sh  build.txt  design.txt  design_example1.cpp  design_example2.cpp  design_example3.cpp  design_example4.cpp  recommended_integration.cpp  solution.txt
module/testexpect/src/: attrcalc_expect.cpp  attrcalc_expect.h  common_expect.cpp  common_expect.h  mute_expect.cpp  mute_expect.h  scale_expect.cpp  scale_expect.h  testexpect.cpp  testexpect.h  testexpect.json
module/testexpect/test/: one_attr.job  two_attr.job
module/testgendata/: CMakeLists.txt  build-testgendata.sh
module/testgendata/src/: data_generator.cpp  data_generator.h  testgendata.cpp  testgendata.h  testgendata.json
module/vdsoutput/: CMakeLists.txt  README.md  build-vdsoutput.sh
module/vdsoutput/src/: ChannelChunkWriter.cpp  ChannelChunkWriter.h  Converter.cpp  Converter.h  SlidingWindow.h  VDSHandler.cpp  VDSHandler.h  VDSWriter.cpp  VDSWriter.h  vdsoutput.cpp  vdsoutput.h  vdsoutput.json
module/vdsoutput/test/: segy2vds.job
scripts/: README.md  README_dependencies.md  gd_builder.py  gd_tester.py  list_module_versions.py  module_manager.py  requirements.txt  test_copy_utils.py  test_manager.py  test_runner.py
scripts/test/: testexpect_scale.py
